<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ldmf_examples_ros2</name>
  <version>1.0.0</version>
  <description>A package containing some examples of using ldm fleet ROS 2 components</description>
  <maintainer email="nguyentannhat2298@gmail.com">tannhat</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ldm_fleet_msgs</exec_depend>
  <exec_depend>ldm_fleet_client_ros2</exec_depend>
  <exec_depend>ldm_fleet_server_ros2</exec_depend>
  <!-- <exec_depend>ldm_server_ros2</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
